use Charset instead of String for encoding