@@ -54,7 +54,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.StringTokenizer;
 
-import static net.adoptopenjdk.icedteaweb.EncodingConstants.UTF_8;
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 /**
  * based on http://www.mcwalter.org/technology/java/httpd/tiny/index.html Very
@@ -254,7 +254,7 @@ public class TinyHttpdImpl extends Thread {
      * @throws UnsupportedEncodingException
      */
     public static String urlToFilePath(String url) throws UnsupportedEncodingException {
-        url = URLDecoder.decode(url, UTF_8); // Decode URL encoded characters, eg "%3B" becomes ';'
+        url = URLDecoder.decode(url, UTF_8.name()); // Decode URL encoded characters, eg "%3B" becomes ';'
         if (url.startsWith(XSX)) {
             url = url.replace(XSX, "/");
         }
